--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation project(':facebooklogin')
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
