--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation project(':facebooklogin')
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.joooonho:selectableroundedimageview:1.0.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
