--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.FeedListActivity"></activity>
+        <activity android:name=".view.NotificationActivity"></activity>
+        <activity android:name=".view.IncidentListReported" />
+        <activity android:name=".view.FeedListActivity" />
         <activity
             android:name=".view.SelectRegionActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".view.UserLoginActivity"
             android:screenOrientation="portrait">
