--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,6 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-s3:2.6.31'
     implementation 'com.amazonaws:aws-android-sdk-ddb:2.3.3'
     implementation 'com.github.zcweng:switch-button:0.0.3@aar'
+    implementation 'com.squareup.picasso:picasso:2.3.2'
 
 }
