--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     compileSdkVersion 28
@@ -47,5 +62,6 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-ddb:2.3.3'
     implementation 'com.github.zcweng:switch-button:0.0.3@aar'
     implementation 'com.squareup.picasso:picasso:2.3.2'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
 
 }
