--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+
         <activity android:name=".SearchCityHallActivity" android:screenOrientation="portrait"></activity>
         <activity
             android:name=".view.ActivitySplash"
