--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".view.MainActivity"
+            android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait" />
         <activity android:name="com.greenhalolabs.facebooklogin.FacebookLoginActivity" />
 
